Add Mockito dependencies and implement tests for DictionaryService and ViewModel