@@ -2,7 +2,6 @@ package com.coffeecode.services;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.coffeecode.model.Vocabulary;
 import com.coffeecode.repository.DictionaryRepository;
@@ -10,9 +9,14 @@ import com.coffeecode.repository.DictionaryRepository;
 public class DictionaryService {
     private final DictionaryRepository repository;
     private List<Vocabulary> vocabularies;
+    private static final String DEFAULT_DICTIONARY_PATH = "src/main/resources/vocabulary.json";
 
     public DictionaryService(DictionaryRepository repository) {
         this.repository = repository;
+    }
+
+    public void loadDefaultDictionary() throws IOException {
+        loadDictionary(DEFAULT_DICTIONARY_PATH);
     }
 
     public void loadDictionary(String filePath) throws IOException {
@@ -22,14 +26,14 @@ public class DictionaryService {
     public List<String> getEnglishWords() {
         return vocabularies.stream()
                 .map(Vocabulary::english)
-                .sorted()
-                .collect(Collectors.toList());
+                .sorted(String.CASE_INSENSITIVE_ORDER) // Sorting logic moved here
+                .toList();
     }
 
     public List<String> getIndonesianWords() {
         return vocabularies.stream()
                 .map(Vocabulary::indonesian)
-                .sorted()
-                .collect(Collectors.toList());
+                .sorted(String.CASE_INSENSITIVE_ORDER) // Sorting logic moved here
+                .toList();
     }
 }
